[gd_scene load_steps=3 format=3 uid="uid://c7qib8m6hsbse"]

[ext_resource type="Script" uid="uid://yvcbykvmekpa" path="res://prefabs/death_zone.gd" id="1_qo3ch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_566e8"]

[node name="deathZone" type="Area2D"]
script = ExtResource("1_qo3ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1920, 1920)
shape = SubResource("RectangleShape2D_566e8")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
